# qt-whiteboard

./: README.md
.cache/clangd/index/: PencilTool.h.6BA606D8BDF53BD6.idx  Tool.h.95B1C58137866771.idx  WhiteboardCanvas.h.E0679637659F4CA1.idx  WhiteboardClient.h.1BFF77CB4DA54B98.idx  WhiteboardServer.h.EB5A819914880325.idx  boardwidget.cpp.8FB63F682BDC1F80.idx  boardwidget.h.285730448F867BA2.idx  circletool.cpp.F454C4AB9736F09A.idx  circletool.h.1164C8D2F64FA31D.idx  cursortracker.cpp.748A1567B0475159.idx  cursortracker.h.DEFDF2078751B6F0.idx  main.cpp.3A760E861E24114E.idx  mygraphicsview.cpp.2A561911815546B8.idx  mygraphicsview.h.9187B77506CF21C0.idx  penciltool.cpp.567BE2FFB766109C.idx  penciltool.h.4FBADFD5DD33F5EA.idx  rectangletool.cpp.E24EB80588841EB3.idx  rectangletool.h.2E3F963E50E141E8.idx  texttool.cpp.DE32A6AFDAE79F14.idx  texttool.h.F6581ECF29DBD802.idx  tool.h.09E87BCCF138B04D.idx  whiteboardcanvas.cpp.26FBB85917677383.idx  whiteboardcanvas.h.79C31AEC8F637C6D.idx  whiteboardclient.cpp.4D888CE4CF815BBF.idx  whiteboardclient.h.4E2EABA94B1242C5.idx  whiteboardserver.cpp.36A5F1D0AEA49946.idx  whiteboardserver.h.13AD682A7C613336.idx
Whiteboard/: CMakeLists.txt  PencilTool.cpp  PencilTool.h  Tool.h  WhiteboardCanvas.cpp  WhiteboardCanvas.h  WhiteboardClient.h  WhiteboardServer.cpp  WhiteboardServer.h  boardwidget.cpp  boardwidget.h  circletool.cpp  circletool.h  collaborationclient.cpp  collaborationclient.h  collaborationserver.cpp  collaborationserver.h  cursortracker.cpp  cursortracker.h  erasertool.cpp  erasertool.h  main.cpp  mygraphicsview.cpp  mygraphicsview.h  penciltool.cpp  penciltool.h  rectangletool.cpp  rectangletool.h  texttool.cpp  texttool.h  whiteboardapp.cpp  whiteboardapp.h  whiteboardcanvas.cpp  whiteboardcanvas.h  whiteboardclient.cpp  whiteboardclient.h  whiteboardserver.cpp  whiteboardserver.h
Whiteboard/business/: sessioncontroller.cpp  sessioncontroller.h  syncmanager.cpp  syncmanager.h  whiteboardcontroller.cpp  whiteboardcontroller.h
Whiteboard/data/: session.cpp  session.h  textitem.cpp  textitem.h  user.cpp  user.h  whiteboardelement.cpp  whiteboardelement.h  whiteboardmodel.cpp  whiteboardmodel.h
Whiteboard/networking/: networkservice.cpp  networkservice.h
Whiteboard/presentation/: canvasview.cpp  canvasview.h  mainwindow.cpp  mainwindow.h  sessiondialog.cpp  sessiondialog.h  stylepanel.cpp  stylepanel.h  toolbar.cpp  toolbar.h  userlistpanel.cpp  userlistpanel.h
doc/: class-poc.puml  class.puml  class2.puml  tickets.json
